--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^1.0.3",
     "meteor-node-stubs": "~0.2.4",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-table": "^6.6.0"
   }
 }
