--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-table": "^6.6.0"
+  },
+  "devDependencies": {
+    "faker": "^4.1.0"
   }
 }
