--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
+    "faker": "^4.1.0",
     "meteor-node-stubs": "~0.2.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-table": "^6.7.4"
-  },
-  "devDependencies": {
-    "faker": "^4.1.0"
   }
 }
